--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: goreleaser
 
 on:
   push:
@@ -10,7 +10,6 @@ permissions:
 
 jobs:
   goreleaser:
-    name: Release on GitHub
     runs-on: ubuntu-latest
     steps:
       -
