--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,8 +11,7 @@ builds:
     binary: rpg
 
 archives:
-  -
-    name_template: "{{ .ProjectName }}_{{ .Tag }}_{{ .Os }}_{{ if eq .Arch "386" }}i386{{ else }}{{ .Arch }}{{ end }}"
+  - name_template: "{{ .ProjectName }}_{{ .Tag }}_{{ .Os }}_{{ if eq .Arch "386" }}i386{{ else }}{{ .Arch }}{{ end }}"
     format_overrides:
       - goos: windows
         format: zip
