--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,8 +5,10 @@ builds:
 
 archives:
   -
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ if eq .Arch "386" }}i386{{ else }}{{ .Arch }}{{ end }}"
     format_overrides:
       - goos: windows
         format: zip
     files:
-      - rpg*
+      - rpg
+      - rpg.exe
